--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@aws-cdk/aws-iam": "^1.107.0",
     "@aws-cdk/aws-lambda": "^1.107.0",
     "@aws-cdk/core": "^1.107.0",
-    "@aws-cdk/custom-resources": "^1.107.0"
+    "@aws-cdk/custom-resources": "^1.107.0",
+    "@aws-sdk/client-lex-models-v2": "^3.17.0"
   }
 }
