--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts",
-    "test": "jest --config jestconfig.json --coverage",
+    "test": "jest --coverage",
+    "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
@@ -36,8 +37,10 @@
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
     "jest": "^26.6.3",
+    "nock": "^13.1.0",
     "prettier": "^2.3.0",
     "ts-jest": "^26.5.6",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.4"
