--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src"
