--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@aws-cdk/aws-iam": "1.107.0",
     "@aws-cdk/aws-lambda": "1.107.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.107.0",
     "@aws-cdk/core": "1.107.0",
     "@aws-cdk/custom-resources": "1.107.0",
     "@aws-sdk/client-lex-models-v2": "^3.17.0",
