chore(test-coverage): Slot Resources
* Add full test coverage for the lex v2 slot handler implementation.
* Remove the `try/catch` blocks for the v2 slot handler and the
  v2 bot handler as it wasn't really necessary. We were logging the
  error to STDOUT then re-throwing the error. We'll get a stacktrace
  by default when an error is thrown in the first place.
* Refactor the v2 bot handler to use `switch/case` for consistency
  with other custom resource handlers.
* Ensure we wrap switch statement cases with curly braces to ensure
  we define a lexical scope for the case. This prevents the
  interpreter from thinking it's declaring the same constant
  multiple times when parsing code (See [1]).
* Build a simple and basic "logger" that can be disabled for the
  test suite by setting the `TEST=1` environment variable. We could
  include a package like `pino`, but this is a very simple approach
  that reduces complexity for our use-case.

[1]: https://stackoverflow.com/questions/35746371/error-duplicate-const-declaration-in-switch-case-statement/35746467#35746467

--- a/src/v2/handlers/lex-slot/package.json
+++ b/src/v2/handlers/lex-slot/package.json
@@ -2,6 +2,7 @@
     "name": "v2-lex-slot-handler",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@aws-sdk/client-lex-models-v2": "^3.17.0"
     }
