chore(test-coverage): Slot Type Resources
* Add full test coverage for the Lex V2 Slot Type custom resource
  handler.
* Refactor the handler to include a lexical scope (curly braces)
  for switch statement cases so that we can declare the `response`
  constant for each case.
* Prefer the use of the spread (`...`) operator for building
  SDK requests so we don't need to mutate a shared object.

--- a/src/v2/handlers/lex-slot-type/package.json
+++ b/src/v2/handlers/lex-slot-type/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "v2-lex-slot-type-handler",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@aws-sdk/client-lex-models-v2": "^3.17.0"
-    }
+  "name": "v2-lex-slot-type-handler",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "@aws-sdk/client-lex-models-v2": "^3.17.0"
+  }
 }
