chore(yarn): Use Yarn as Dev Package Manager
* To be consistent with our existing node applications, we're
  going to use yarn over npm for package management when developing.
* Remove scripts that were explicitly referencing `npm`. It looks like
  most of these scripts were executing git commands and performing
  lint orior to release of a new version on npm. We should be able
  to release manually when necessary.
* Add a LICENSE file and specify the MIT license!
* Remove the package-lock.json in favour of yarn.lock.
* Fix a test that was using `console.error` to output debug data.
* Alphabetize the IAM role actions used for custom resource
  handler lambda functions.
* Remove the `iam:PassRole` action from the first policy on the
  IAM role as we add it in a separate policy immediately after.
* Reduce the constraint on `@aws-cdk/*` package resolution using
  the caret (`^`) directive. We want to have the package manager
  resolve to the same version that is specified in the host
  application.

--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "@amaabca/aws-lex-custom-resources",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "AWS Lex infrastructure as code via the CDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts",
     "test": "jest",
-    "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand"
   },
   "repository": {
     "type": "git",
@@ -49,12 +45,11 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "@aws-cdk/aws-iam": "1.107.0",
-    "@aws-cdk/aws-lambda": "1.107.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.107.0",
-    "@aws-cdk/core": "1.107.0",
-    "@aws-cdk/custom-resources": "1.107.0",
-    "@aws-sdk/client-lex-models-v2": "^3.17.0",
-    "aws-sdk": "^2.903.0"
+    "@aws-cdk/aws-iam": "^1.111.0",
+    "@aws-cdk/aws-lambda": "^1.111.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.111.0",
+    "@aws-cdk/core": "^1.111.0",
+    "@aws-cdk/custom-resources": "^1.111.0",
+    "@aws-sdk/client-lex-models-v2": "^3.17.0"
   }
 }
