--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "esbuild": "^0.12.15",
     "eslint": "^7.29.0",
     "jest": "^26.6.3",
     "nock": "^13.1.0",
