--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amaabca/aws-lex-custom-resources",
-  "version": "2.0.6",
+  "version": "3.0.0",
   "description": "AWS Lex infrastructure as code via the CDK",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -30,10 +30,8 @@
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
-    "esbuild": "^0.12.15",
     "eslint": "^7.29.0",
     "jest": "^26.6.3",
-    "nock": "^13.1.0",
     "prettier": "^2.3.0",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
@@ -46,11 +44,8 @@
   ],
   "dependencies": {
     "@aws-cdk/assert": "^1.111.0",
-    "@aws-cdk/aws-iam": "^1.111.0",
-    "@aws-cdk/aws-lambda": "^1.111.0",
-    "@aws-cdk/aws-lambda-nodejs": "^1.111.0",
+    "@aws-cdk/aws-sam": "^1.111.0",
     "@aws-cdk/core": "^1.111.0",
-    "@aws-cdk/custom-resources": "^1.111.0",
-    "@aws-sdk/client-lex-models-v2": "^3.17.0"
+    "@aws-sdk/client-lex-models-v2": "^3.33.0"
   }
 }
