--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "@aws-cdk/assert": "^1.111.0",
-    "@aws-cdk/aws-sam": "^1.111.0",
-    "@aws-cdk/core": "^1.111.0",
-    "@aws-sdk/client-lex-models-v2": "^3.33.0"
+    "@aws-cdk/assert": "^1.121.0",
+    "@aws-cdk/aws-sam": "^1.121.0",
+    "@aws-cdk/core": "^1.121.0",
+    "@aws-sdk/client-lex-models-v2": "^3.33.0",
+    "nock": "^13.1.3"
   }
 }
